utils-core/main/default/objects/Datatable_Column_Config__mdt/Datatable_Column_Config__mdt.object-meta.xml
<CustomObject>
    <description>Column property fine tuning for Datatable_Config__mdt. This overrides all other column properties set in other ways.</description>
    <label>Datatable Column Config</label>
    <pluralLabel>Datatable Column Config</pluralLabel>
</CustomObject>