utils-core/main/default/objects/Datatable_Column_Config__mdt/fields/Column_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Column_Field_Name__c</fullName>
    <inlineHelpText>This is the fieldName of the column per the lightning-datatable documentation</inlineHelpText>
    <label>Column Field Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>