utils-core/main/default/objects/Datatable_Column_Config__mdt/fields/Column_Properties_JSON__c.field-meta.xml
<CustomField>
    <fullName>Column_Properties_JSON__c</fullName>
    <inlineHelpText>Must be in the following sample format:

{
  &quot;typeAttributes&quot;: {
    &quot;currencyCode&quot;: {
      &quot;fieldName&quot;: &quot;CurrencyISO__c&quot;
    },
    &quot;step&quot;: 0.0001
  },
  &quot;initialWidth&quot;: 100
}</inlineHelpText>
    <label>Column Properties JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>