utils-core/main/default/objects/Datatable_Column_Config__mdt/fields/Datatable_Config__c.field-meta.xml
<CustomField>
    <fullName>Datatable_Config__c</fullName>
    <label>Datatable Config</label>
    <referenceTo>Datatable_Config__mdt</referenceTo>
    <relationshipLabel>Play Datatable Column Config</relationshipLabel>
    <relationshipName>Datatable_Column_Config1</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>