utils-core/main/default/objects/Datatable_Column_Config__mdt/listViews/All_Configs.listView-meta.xml
<ListView>
    <fullName>All_Configs</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Datatable_Config__c</columns>
    <columns>Column_Field_Name__c</columns>
    <columns>Column_Properties_JSON__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Configs</label>
</ListView>